# Multiagent_peer_review_deepagent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: sample_paper.md
src/review_engine/: __init__.py  __main__.py
src/review_engine/agents/: __init__.py  deepagent_runner.py
src/review_engine/cli/: run_review.py
src/review_engine/config/: __init__.py  dimensions.py  settings.py
src/review_engine/core/: __init__.py  deep_agents.py  dimensions.py  prompts.py  runtime.py  settings.py
src/review_engine/formatters/: __init__.py  html_report.py  markdown_report.py
src/review_engine/graph/: __init__.py  state.py  workflow.py
src/review_engine/logging/: __init__.py  artifact_manager.py  event_schema.py  run_logger.py
src/review_engine/prompts/: __init__.py  original_prompts.py
src/review_engine/schemas/: __init__.py  common.py  critic.py  review.py  scoring.py
src/review_engine/tools/: __init__.py  db_schema_inspect.py  history_repository.py  paper_excerpt.py  paper_search.py  python_sandbox.py  sql_readonly.py
src/review_engine/utils/: __init__.py  json_parser.py
src/review_engine/workflows/: __init__.py  review_graph.py  state.py
